[tool.poetry]
name = "interest-rate-models"
version = "0.1.0"
description = "Library for interest rate model calibration and pricing."
authors = ["Paul Lopez <nik.lopez381@gmail.com>"]
readme = "README.md"
packages = [{ include = "interest_rate_models", from = "python_lib" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.4"
grpcio = "^1.70.0"
protobuf = "^3.20.3"
scipy = "^1.11.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

